# dvmn-async-space

./: README.md  main.py  pyproject.toml
core/: garbage.py  globals.py  rocket_animation.py  settings.py  space_garbage.py  star.py
src/: fire_animation.py  globals.py  helpers.py  messages.py  rocket.py  settings.py  space_garbage.py  star.py
