[tool.poetry]
name = "repl_python3_beta_dvmn-async-space"
version = "0.1.0"
description = ""
authors = ["Arrisio <zemlak@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
vendor = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
